Updates to fix collapse menu in responsive.

--- a/web-app/css/cgrails/default/less/bootstrap-custom.less
+++ b/web-app/css/cgrails/default/less/bootstrap-custom.less
@@ -32,11 +32,13 @@ body {
 }
 
 .nav-collapse	{
-
 	li	{
 		i	{
-		font-size: 24px;
+			font-size: 24px;
 		}
+	}
+	.dropdown-submenu > a:after  {
+		display:none;
 	}
 }
 
